--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>commons-jexl</groupId>
   <artifactId>commons-jexl</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.1-patched</version>
   <name>Commons JEXL</name>
   <inceptionYear>2003</inceptionYear>
   <description>Jexl is an implementation of the JSTL Expression Language with extensions.</description>
@@ -98,8 +98,8 @@
   </dependencies>
 
   <properties>
-    <maven.compile.source>1.4</maven.compile.source>
-    <maven.compile.target>1.4</maven.compile.target>
+    <maven.compile.source>1.5</maven.compile.source>
+    <maven.compile.target>1.5</maven.compile.target>
     <commons.componentid>jexl</commons.componentid>
     <commons.release.version>1.1</commons.release.version>
     <commons.binary.suffix></commons.binary.suffix>
